@@ -1,6 +1,7 @@
 Changes with APR-util 0.9.3
 
-
+  *) Fix error in apu-config when symlinks are involved.
+     [Garrett Rooney <rooneg@electricjellyfish.net>]
 
 Changes with APR-util 0.9.2
 
